--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,16 +26,17 @@
         <activity android:name=".ReturnFromLoginActivity">
             <intent-filter android:label=".LoginReturnFrom">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
-                <data android:scheme="ark-web-map-login"
+                <data
                     android:host="login"
-                    android:pathPrefix="/" />
-                <!-- note that the leading "/" is required for pathPrefix-->
+                    android:pathPrefix="/"
+                    android:scheme="ark-web-map-login" />
+                <!-- note that the leading "/" is required for pathPrefix -->
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
