Added dino stats menu! It'll appear when you tap a dino on the map.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity
             android:name=".NetEntities.ArkServerNotificationsMenuActivity"
             android:label="@string/title_activity_ark_server_notifications_menu"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
