Moved notifications menu activity out of NetEntities (why was it there in the first place?) and implemented menu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NetEntities.ArkServerNotificationsMenuActivity"
+            android:name=".ArkServerNotificationsMenuActivity"
             android:label="@string/title_activity_ark_server_notifications_menu"
             android:theme="@style/AppTheme" />
     </application>
